vpn: fix zero IPv6 address check

Bug introduced by commit d8e6065.

https://bugzilla.gnome.org/show_bug.cgi?id=706286

Reported-by: Nicolas Iooss <nicolas.iooss.2010_nm@m4x.org>
Acked-by: Thomas Haller <thaller@redhat.com>